[gd_scene load_steps=18 format=3 uid="uid://duxtcqe1fdyix"]

[ext_resource type="Texture2D" uid="uid://c807thj02xrjm" path="res://Kings and Pigs/Sprites/09-Bomb/Bomb Off.png" id="1_dxce3"]
[ext_resource type="Script" path="res://scripts/bomb.gd" id="1_i7js2"]
[ext_resource type="Texture2D" uid="uid://bqxxackn5a76w" path="res://Kings and Pigs/Sprites/09-Bomb/Bomb On (52x56).png" id="2_m5aes"]
[ext_resource type="Texture2D" uid="uid://c3bkqjigkelll" path="res://Kings and Pigs/Sprites/09-Bomb/Boooooom (52x56).png" id="3_xy1ty"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aa4r0"]
atlas = ExtResource("1_dxce3")
region = Rect2(0, 0, 52, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_yujnn"]
atlas = ExtResource("2_m5aes")
region = Rect2(0, 0, 52, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln8aq"]
atlas = ExtResource("2_m5aes")
region = Rect2(52, 0, 52, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrbem"]
atlas = ExtResource("2_m5aes")
region = Rect2(104, 0, 52, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b3en"]
atlas = ExtResource("2_m5aes")
region = Rect2(156, 0, 52, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqn72"]
atlas = ExtResource("3_xy1ty")
region = Rect2(0, 0, 52, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol7o0"]
atlas = ExtResource("3_xy1ty")
region = Rect2(52, 0, 52, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_bych1"]
atlas = ExtResource("3_xy1ty")
region = Rect2(104, 0, 52, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7dnh"]
atlas = ExtResource("3_xy1ty")
region = Rect2(156, 0, 52, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_hius4"]
atlas = ExtResource("3_xy1ty")
region = Rect2(208, 0, 52, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_btivd"]
atlas = ExtResource("3_xy1ty")
region = Rect2(260, 0, 52, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_03eq1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa4r0")
}],
"loop": false,
"name": &"BombOff",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yujnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln8aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrbem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b3en")
}],
"loop": false,
"name": &"BombOn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqn72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol7o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bych1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7dnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hius4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btivd")
}],
"loop": false,
"name": &"Boom",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ix3kf"]

[node name="Bomb" type="RigidBody2D"]
script = ExtResource("1_i7js2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_03eq1")
animation = &"Boom"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_ix3kf")

[node name="BombOffTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="BombOffTimer" to="." method="_on_bomb_off_timer_timeout"]
